force-app/main/default/objects/OneCRM__LookupRollupSummaryLog__c/fields/OneCRM__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>