force-app/main/default/objects/OneCRM__LookupRollupSummaryLog__c/fields/OneCRM__ParentId__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ParentId__c</fullName>
    <externalId>true</externalId>
    <label>Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>