force-app/main/default/objects/OneCRM__LookupRollupSummaryLog__c/fields/OneCRM__ParentObject__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ParentObject__c</fullName>
    <label>Parent Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>