force-app/main/default/objects/OneCRM__LookupRollupSummaryLog__c/listViews/OneCRM__All.listView-meta.xml
<ListView>
    <fullName>OneCRM__All</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__ErrorMessage__c</columns>
    <columns>OneCRM__ParentId__c</columns>
    <columns>OneCRM__ParentObject__c</columns>
    <columns>OneCRM__ParentRecord__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>